--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"href="./style.css">
 </head>
-<header></header>
+<header class="title">
 <h1>Word widget</h1>
+</header>
 <body>
-    
+    <div class="title">
+    <input type="text" class="sentence">
+    <button class="textBtn">Show Text</button>
+</div>
 </body>
 </html>
