--- a/test/index.html
+++ b/test/index.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Word width</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>Mocha Tests</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
+  </head>
+  <body>
+    <div id="mocha"></div>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/9.0.2/mocha.min.js" charset="utf-8"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
-  <link rel="stylesheet"href="./style.css">
+    <script src="https://unpkg.com/chai/chai.js"></script>
+    <script src="https://unpkg.com/mocha/mocha.js"></script>
 
-</head>
-<body>
-
-  <div id="mocha"></div>
-  <script>
-      // the mocha test style to use - we use BDD - Behviour Driven Development
+    <script class="mocha-init">
       mocha.setup('bdd');
-      //ensure the assert function is available
-      var assert = chai.assert;
-  </script>
-
-         <!-- ------------------------------------ -->
-       <script src="../widget.js" charset="utf-8"></script>
-       <script src="test/widget.test.js" charset="utf-8"></script>
-
-  <script>
-      //configure and run mocha
       mocha.checkLeaks();
+    </script>
+    
+    <script src="../widget.js"></script>
+    <script src="widget.test.js"></script>
+    
+    <script class="mocha-exec">
       mocha.run();
-  </script>
-  
-</body>
+    </script>
+  </body>
 </html>
